--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -23,8 +23,7 @@
     </UserControl.Resources>
 
     <Grid x:Name="LayoutRoot" 
-          Background="{StaticResource NavigationPanelBrush}"
-          Tap="BackgroundPopup_Tap">
+          Background="{StaticResource NavigationPanelBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="56"/>
             <RowDefinition Height="*"/>
@@ -48,7 +47,8 @@
                    Foreground="{StaticResource NavigationPanelForegroundBrush}"
                    FontSize="28"
                    FontWeight="ExtraLight"
-                   HorizontalAlignment="Center"/>
+                   HorizontalAlignment="Center"
+                   Tap="BackgroundPopup_Tap"/>
 
         <ToggleButton Grid.Column="2" 
                       Grid.Row="0"
