--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -14,6 +14,7 @@
     SupportedOrientations="Portrait"  
     Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
+    shell:SystemTray.ProgressIndicator="{Binding ProgressIndicator}"
     Style="{StaticResource PageThemeStyle}"
     Name="Page">
     
@@ -30,7 +31,7 @@
             </DataTemplate>
         </ResourceDictionary>
     </phone:PhoneApplicationPage.Resources>
-    
+
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" 
           Background="Transparent">
