--- a/LiteTube/SearchPage.xaml
+++ b/LiteTube/SearchPage.xaml
@@ -14,6 +14,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True"
+    shell:SystemTray.ProgressIndicator="{Binding ProgressIndicator}"
     Style="{StaticResource PageThemeStyle}">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
