--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -50,28 +50,17 @@
                    HorizontalAlignment="Center"
                    Tap="BackgroundPopup_Tap"/>
 
-        <ToggleButton Grid.Column="2" 
-                      Grid.Row="0"
-                      ContentTemplate="{StaticResource LogoutIcon}"
-                      Style="{StaticResource NavigationControlToggleButtonStyle}"
-                      IsChecked="{Binding IsProfileChecked, Mode=TwoWay}"
-                      x:Name="LoginMenuButton"/>
-
-        <Popup Grid.Row="1"
-               Grid.Column="0"
-               Grid.ColumnSpan="3"
-               IsOpen="{Binding Path=IsChecked, ElementName=LoginMenuButton}">
-            <Grid Background="Black"
-                  Opacity="0.7"
-                  Name="BackgroundGridPopup"
-                  Tap="BackgroundPopup_Tap"
-                  Width="{Binding ActualWidth, ElementName=LayoutRoot}">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-            </Grid>
-        </Popup>
+        <Button Grid.Column="2" 
+                Grid.Row="0"
+                Style="{StaticResource NavigationControlButtonStyle}"
+                x:Name="LoginMenuButton"
+                Command="{Binding SearchCommand}">
+            <TextBlock Text="&#xe11a;" 
+                       FontFamily="Segoe UI Symbol"
+                       Foreground="{StaticResource NavigationPanelForegroundBrush}"
+                       FontSize="27"
+                       Margin="-2,0,0,0"/>
+        </Button>
 
         <Popup Grid.Row="1"
                Grid.Column="0"
@@ -79,7 +68,7 @@
                IsOpen="{Binding Path=IsChecked, ElementName=MainMenuButton}">
             <Grid Background="Black"
                   Opacity="0.7"
-                  Name="BackgroundGridPopup1"
+                  Name="BackgroundGridPopup"
                   Tap="BackgroundPopup_Tap"
                   Width="{Binding ActualWidth, ElementName=LayoutRoot}">
                 <Grid.RowDefinitions>
